src/app/navigation/layouts/default/default.layout.component.scss
@import "../../../../assets/scss/colors";

header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  z-index: 1;
}

.container-floating-header {
  margin-top: 70px;
}

.container {
  position: relative;
  background-color: #E6EAF2;
  font-family: Roboto, sans-serif;
}

.navigation-menu--overlay {
  position: fixed;
  z-index: 15;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0);
  overflow: auto;

  navigation-menu {
    display: block;
    background: white;
    width: 100%;
    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.35);
  }

}

.notifications-popup {
  position: fixed;
  bottom: 10px;
  z-index: 4;
  right: 10px;
  width: 350px;
  font-family: Roboto, sans-serif;
}

.create-order-modal-container {
  display: flex;
  z-index: 5;
  height: 100vh;
  width: 100vw;
  overflow: auto;
  position: fixed;
  left: 0;
  top: 0;
  padding: 15px 60px;
  box-sizing: border-box;
  background: rgba(0,0,0,0.5);

  create-order {
    display: block;
    margin: auto;
    width: 100%;
    max-width: 1120px;
  }
}

.welcome-container {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  z-index: 2;
  width: 100vw;
  height: 100vh;
  background: $main-color-400;
  animation: fadeaway 1s;
  animation-delay: 1s;
}

@keyframes fadeaway {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}

.terms-and-conditions-container {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  flex-direction: column;
  z-index: 3;
  width: 100vw;
  height: 100vh;
  background: rgba(41, 108, 204, 0.75);
}

terms-and-conditions {
  margin: auto;
}

#box {
  animation: fontbulger 2s infinite;
}

.welcome {
  margin: auto;
  text-align: center;

  mat-icon {
    width: 120px;
    height: 120px;
    border-radius: 50%;
    box-shadow: 0 4px 4px rgba(0,0,0,0.25);
    background: $action-color;
    font-size: 120px;
    color: white;
  }

  .text {
    margin-top: 20px;
    line-height: 84px;
    font-family: "Roboto", serif;
    font-weight: 300;
    font-size: 74px;
    color: white;
  }
}

.removeShadow {
  box-shadow: none;
  border-right: 1px solid rgba(0, 0, 0, 0.12);
}

